# apo-holo-protein-structure-stats

./: .gitignore  README.ipynb  README.md  download.py  pipeline.py  pyproject.toml  requirements.txt  setup.cfg
apo_holo_structure_stats/: __init__.py  config.py  otazky.txt  pipeline.py  sample_settings.yaml  settings.py
apo_holo_structure_stats/core/: analyses.py  analysesinstances.py  base_analyses.py  biopython_to_mmcif.py  dataclasses.py  json_deserialize.py  json_serialize.py  mp_lru_cache.py  pipeline.py
apo_holo_structure_stats/input/: download.py  testing_groups.ipynb  uniprot_groups.py
apo_holo_structure_stats/paper_repl/: holodl.py  json_deserialize.py  main.py  paper_plots.ipynb  pipeline_without_analyses_compare.ipynb  pymol_visualize_2DA.py  structure_filtering.py
apo_holo_structure_stats/pipeline/: chains_for_uniprot_ids.py  download_structures.py  filter_structures.py  is_holo.py  isoform.py  logging.py  make_pairs_lcs.py  run_1struct_analyses.py  run_analyses.py  run_analyses_settings.py  total_pipeline.py
apo_holo_structure_stats/results/: json_deserialize.py  results.ipynb
apo_holo_structure_stats/test/: test_analyses.py  test_dataclasses.py  test_input.py  test_pipeline.py
manual_test_data/: api_errors.txt  different_domain_count  outputlog  paper_pdf_results_table_chains
metacentrum_scripts/: generic_run_python_script.sh  prepare_run_analyses.py  prepare_run_analyses.sh  prepare_run_analyses_cryptic.sh  run_jupyter_server.py  run_pipeline.py  shard_input_for_run_analyses.py  submit_download_structures.py  submit_failed_filter_structures.py  submit_failed_run_analyses.py  submit_filter_structures.py  submit_make_pairs.py  submit_prepare_run_analyses.sh  submit_run_1struct_analyses.py  submit_run_analyses.py  submit_run_analyses_cryptic.py
paper_repl/: holodl.py  main.py  paper_dataset_utils.py  paper_plots.ipynb  pipeline_without_analyses_compare.ipynb  pymol_visualize_2DA.py  structure_filtering.py
paper_repl/pipeline/: compare_with_paper_pipeline_ah_pair_division.py  filter_structures.json  isoform.json
results/: results.ipynb
wiki/general/: core.md  input__groups_of_structures__apis.md  paper__process.md
(+19 files in other folders)
