[metadata]
name = apo-holo-structure-stats
version = 0.0.1
author = Adam Král
;description = A small example package
#long_description = file: README.md
#long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
#package_dir = src
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    ah-chains-uniprot = apo_holo_structure_stats.pipeline.chains_for_uniprot_ids:main
    ah-download-structures = apo_holo_structure_stats.pipeline.download_structures:main
    ah-filter-structures = apo_holo_structure_stats.pipeline.filter_structures:main
    ah-make-pairs = apo_holo_structure_stats.pipeline.make_pairs_lcs:main
    ah-run-1struct-analyses = apo_holo_structure_stats.pipeline.run_1struct_analyses:main
    ah-run-analyses = apo_holo_structure_stats.pipeline.run_analyses:main

#[options.packages.find]
#where = src


# todo add requirements
